Add a page break

--- a/templates/eisvogel.tex
+++ b/templates/eisvogel.tex
@@ -964,11 +964,15 @@ $if(title)$
 $if(beamer)$
 \frame{\titlepage}
 $endif$
+
 $if(abstract)$
+\newpage
 \begin{abstract}
 $abstract$
 \end{abstract}
+\newpage
 $endif$
+
 $endif$
 
 $if(first-chapter)$
