Change cover to black-white
Easier for home or copy-shop printing and binding

--- a/templates/eisvogel.tex
+++ b/templates/eisvogel.tex
@@ -879,7 +879,7 @@ $endif$
 %%
 \usepackage{pdfpages}
 \begin{document}
-\includepdf[pages=1]{content/cover.pdf}
+\includepdf[pages=1]{content/cover-bw.pdf}
 %%
 %% begin titlepage
 %%
